themes/startwords/assets/scss/article/_summary.scss
/* article summary styles */

$triangle-left: polygon(0% 0%, 100% 0%, 100% 100%, 0% 100%, 250% 50%);
$triangle-right: polygon(100% 0%, 0% 0%, 0% 100%, 100% 100%, -150% 50%);

// adjusted shapes as of issue 3
$curve-left: polygon(100% 0, 100% 100%, 16% 100%, 55% 91%, 82% 81%, 100% 53%, 80% 20%, 53% 9%, 14% 0);
$curve-right: polygon(0 0, 0 100%, 97% 100%, 39% 86%, 15% 75%, 0 48%, 16% 21%, 46% 10%, 100% 0);
// scale vertically for desktop
// var(--h) : 1.1;
$curve-left-desktop: polygon(100% 0, 100% calc(100% * var(--h)), 16% calc(100% * var(--h)), 55% calc(91% * var(--h)), 82% calc(81% * var(--h)), 100% calc(53% * var(--h)), 80% calc(20% * var(--h)), 53% calc(9% * var(--h)), 14% 0);
$curve-right-desktop: polygon(0 0, 0 calc(100% * var(--h)), 97% calc(100% * var(--h)), 39% calc(86% * var(--h)), 15% calc(75% * var(--h)), 0 calc(48% * var(--h)), 16% calc(21% * var(--h)), 46% calc(10% * var(--h)), 100% 0);

$preview-height-xs: rem(300px);  // 320px-375px
$preview-height-s:  rem(275px);  // 375px-414px
$preview-height-m:  rem(230px);  // 414px-768px
$preview-height-l:  rem(300px);  // 768px-1024px
$preview-height-xl: rem(250px);  // 1024px-

.article-summary {
    display: block;
    width: 48%;  /* leave some space between columns */
    font-size: rem(16px);
    font-family: $font-sans;
    // position: relative;   /* remove so bg-text can be positioned absolutely outside the summary */
    z-index: 1;

    @media (min-width: $breakpoint-m) { font-size: rem(18px); }

    a:not(.doi) {
        text-decoration: none;
    }

    p, .bg-text {
        margin: 0;
        line-height: rem(22px);
        max-width: rem(200px);
        position: relative;
        overflow: hidden;
        @media (min-width: $breakpoint-m) { font-size: rem(18px); }
    }


    // height must be set for shape-outside text flow;
    // spacer height is set in hugo template based on content length
    .shaper {
        width: 60%;
        float: right;
        display: block;
    }

    h2 {
        font-family: $font-sans;
        font-weight: bold;
        font-style: italic;
        text-decoration: underline;
        margin: rem(12px) 0 rem(16px);

        &::after {
            position: relative;
            z-index: 1;
        }
    }

    .authors {
        display: block;
        // suppress author link on summary view
        a { display: none; }
    }

    .authors, p { font-weight: 400; }

    .authors, h2 {
        font-size: rem(18px);
        @media (min-width: $breakpoint-m) { font-size: rem(20px); }
    }

    .doi {
        font-weight: 300;
        margin-top: rem(10px);
        word-wrap: break-word;
    }

    // background text
    .bg-text {
        position: absolute;
        left: 0;  // attach to left of viewport; keep fixed with text vertically
        width: 100%;
        color: $light-purple;
        opacity: 10%;
        pointer-events: none;

        // use scale for sizing to ensure text shape matches visible summary
        // scale relative to initial font size of 1rem (18px)

        // on mobile, position 21px above corresponding summary text
        // desired font size is 19px; original mobile font size is 16, so 1.18x
        transform: translate(0, -21px) scale(1.18);
        // set transform origin relative to left so that scaling will not move off-screen
        transform-origin: left top;

        // shift to desktop styles at the breakpoint where summaries are not attached to viewport edge
        @media (min-width: $breakpoint-s) {
            // position 108px above corresponding summary text
            // desired font size is 32px, relative to 18x base font size is 1.8x
            transform: translate(0, -108px) scale(1.8);
        }
    }

    // secondary shadow is even larger and more transparent
    .bg-text.secondary {
        opacity: 3%;
        // on mobile, position 49px above corresponding summary text
        // desired font size is 32px; original mobile font size is 16, so 2x
        transform: translate(-14px, -49px) scale(2);

        // shift to desktop styles at the breakpoint where summaries are not attached to viewport edge
        @media (min-width: $breakpoint-s) {
            // position 170px above corresponding summary text
            // shift left (text begins off screen)
            // desired font size is 54px, relative to 16x base font size is 3x
            transform: translate(-28px, -170px) scale(3);
        }
    }

    // scale the polygon shape based on screen width
    p span, .bg-text span {
        --h: 1;

        @media (min-width: $breakpoint-s) { --h: 1.2; }
        /* desktop shape should be ~1.1 scale of desktop; adjust the shape */
        @media (min-width: $breakpoint-m) { --h: 1.1 }

    }

    // left summaries
    &:nth-of-type(odd) {
        float: left;
        text-align: left;

        .bg-text {
            text-align: left;
        }


        .shaper {
            float: right;
            shape-outside: $curve-left;
            /* turn on clip-path to view the shape for debugging
            clip-path: $curve-left;
            background-color: white;
            opacity: 0.1; */

            /* desktop shape should be ~1.1 scale of desktop; adjust the shape */
            @media (min-width: $breakpoint-s) {
                shape-outside: $curve-left-desktop;
                clip-path: $curve-left-desktop;
            }

        }

    }

    // right summaries
    &:nth-of-type(even) {
        float: right;
        text-align: right;
        margin-top: rem(40px);

        p { margin-left: auto; }

        .shaper {
            float: left;
            /* turn on clip-path to view the shape for debugging
            clip-path: $curve-right;
            background-color: white;
            opacity: 0.1; */

            shape-outside: $curve-right;
            @media (min-width: $breakpoint-s) {
               shape-outside: $curve-right-desktop;
               clip-path: $curve-right-desktop;
            }
        }

        .bg-text {
            right: 0;  // attach to right side of screen instead of left
            left: auto;
            transform-origin: right top;  // scale relative to right side
        }
    }

    // Adjust vertical spacing for the second article when there are three articles
    //  (i.e., 2nd article summary is also the 2nd to last article summary).
    &:nth-of-type(2):nth-last-of-type(2) {
        padding-top: 12em;

        @media (min-width: $breakpoint-s) {
            padding-top: 10em;
        }
    }

    // adjust spacing for first summary when there are three
    &:nth-of-type(1):nth-last-of-type(3) {
        margin-top: rem(62px);
    }
    /* add spacing to any summary that comes after the first in a column */
    &:nth-child(n+3) {
        margin-top: rem(96px);
        @media (min-width: $breakpoint-s) {
            margin-top: rem(124px);
        }
    }

    // adjust spacing for last summary when there are three
    &:nth-of-type(3):nth-last-of-type(1) {
        margin-bottom: rem(62px);
    }

    // inverted portions use light purple instead of white
    &.inverted,
    .inverted & {
        @include inverted;
        color: $light-purple;

        a, a:visited {
            color: $light-purple;
        }
    }
}

/* non-featured articles in an issue have a briefer listing */
.article-short-summary {

    clear: both;
    font-size: rem(16px);
    margin-bottom: 0.75rem;

    @media (min-width: $breakpoint-s) { font-size: rem(18px); }

    a {
        font-weight: normal;
        font-style: italic;
    }

    .tag {
        color: $light-grey;
        font-size: rem(12px);
        &::before {
            content: "#";
        }
    }

    // sequential author display with commas
    .authors {
        padding: 0;
        margin: 0;
        li, address { display: inline; }
        address { font-style: normal; }
        address::after { content: ', '; }
        li:last-child address::after { content: ''; }

        // suppress author link on summary view
        a { display: none; }
    }

}

